--- a/Container/App.xaml
+++ b/Container/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Personendatenbank.App"
+﻿<Application x:Class="Container.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Personendatenbank"
-             StartupUri="PersonenDialog.xaml">
+             xmlns:local="clr-namespace:Container"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
