--- a/Personendatenbank/PersonenDialog.xaml
+++ b/Personendatenbank/PersonenDialog.xaml
@@ -4,21 +4,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Personendatenbank"
+        xmlns:sys="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
         Title="Neue Person" 
         Height="275" Width="285" ResizeMode="NoResize" 
         WindowStartupLocation="CenterScreen" Topmost="True"
-        FontSize="14.0">
-    <Window.Background>
-        <LinearGradientBrush>
-            <GradientStop Color="LightYellow" Offset="0"/>
-            <GradientStop Color="Orange" Offset="1"/>
-        </LinearGradientBrush>
-    </Window.Background>
+        FontSize="14.0"
+        Style="{StaticResource Sty_Wnd}">
 
     <Window.DataContext>
-        <local:Person/>
+        <local:Person Lieblingsfarbe="Black"/>
     </Window.DataContext>
+
+    <Window.Resources>
+        <local:GenderToBoolConverter x:Key="gender2bool"/>
+
+        <ObjectDataProvider x:Key="Odp_Colors"
+                            MethodName="GetType"
+                            ObjectType="{x:Type sys:Type}">
+            <ObjectDataProvider.MethodParameters>
+                <sys:String>System.Windows.Media.Colors, PresentationCore, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35</sys:String>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
+        <ObjectDataProvider x:Key="Odp_ColorsProperties"
+                            MethodName="GetProperties"
+                            ObjectInstance="{StaticResource Odp_Colors}"/>
+
+        <local:ColorsConverter x:Key="colorsConverter"/>
+
+    </Window.Resources>
 
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
@@ -35,116 +50,73 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Vorname:"
-                   VerticalAlignment="Center"
-                   Margin="0,0,5,0"/>
+        <TextBlock Text="Vorname:"/>
         <TextBlock Text="Nachname:" 
-                   Grid.Row="1"
-                   VerticalAlignment="Center"
-                   Margin="0,0,5,0"/>
+                   Grid.Row="1"/>
         <TextBlock Text="Geburtsdatum:" 
-                   Grid.Row="2"
-                   VerticalAlignment="Center"
-                   Margin="0,0,5,0"/>
+                   Grid.Row="2"/>
         <TextBlock Text="Verheiratet:" 
-                   Grid.Row="3"
-                   VerticalAlignment="Center"
-                   Margin="0,0,5,0"/>
+                   Grid.Row="3"/>
         <TextBlock Text="Lieblingsfarbe:" 
-                   Grid.Row="4"
-                   VerticalAlignment="Center"
-                   Margin="0,0,5,0"/>
+                   Grid.Row="4"/>
         <TextBlock Text="Geschlecht:" 
-                   Grid.Row="5"
-                   VerticalAlignment="Top"
-                   Margin="0,0,5,0"/>
+                   Grid.Row="5"/>
 
         <TextBox x:Name="Tbx_Vorname"
                  Grid.Column="1"
-                 Margin="2"
                  Text="{Binding Vorname}"/>
 
         <TextBox x:Name="Tbx_Nachname"
                  Grid.Column="1" Grid.Row="1"
-                 Margin="2"
                  Text="{Binding Nachname}"/>
 
         <DatePicker x:Name="Dpr_Geburtsdatum"
                     Grid.Column="1" Grid.Row="2"
-                    VerticalAlignment="Center"
-                    Margin="2"
                     SelectedDate="{Binding Geburtsdatum}"/>
 
         <CheckBox x:Name="Cbx_Verheiratet"
                   Grid.Column="1" Grid.Row="3"
-                  VerticalAlignment="Center"
-                  Margin="2"
                   IsChecked="{Binding Verheiratet}"/>
 
         <ComboBox x:Name="Cbb_Lieblingsfarbe"
                   Grid.Column="1" Grid.Row="4"
                   VerticalAlignment="Center"
                   Margin="2"
-                  SelectedValue="{Binding Lieblingsfarbe}">
-            <ComboBoxItem Content="Grün" Foreground="Green"/>
-            <ComboBoxItem Content="Blau" Foreground="Blue"/>
-            <ComboBoxItem Content="Rot" Foreground="Red"/>
-            <ComboBoxItem Content="Gelb" Foreground="Yellow"/>
+                  SelectedIndex="{Binding Lieblingsfarbe,  Converter={StaticResource colorsConverter}, ConverterParameter={StaticResource Odp_ColorsProperties}}"
+                  ItemsSource="{Binding Source={StaticResource Odp_ColorsProperties}}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Border BorderBrush="Black" BorderThickness="1" Width="20" Height="20" Margin="5,0">
+                            <Rectangle Width="20" Height="20" Fill="{Binding Name}"/>
+                        </Border>
+                        <TextBlock Text="{Binding Name}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
         </ComboBox>
 
         <StackPanel Margin="2"
                     Grid.Column="1" Grid.Row="5">
             <RadioButton Content="M"
                          GroupName="Rbg_Gender"
-                         VerticalContentAlignment="Center">
-                <RadioButton.IsChecked>
-                    <Binding Path="Geschlecht"
-                             ConverterParameter="{x:Static local:Gender.Männlich}">
-                        <Binding.Converter>
-                            <local:GenderToBoolConverter/>
-                        </Binding.Converter>
-                    </Binding>
-                </RadioButton.IsChecked>
-            </RadioButton>
+                         IsChecked="{Binding Geschlecht, Converter={StaticResource gender2bool}, ConverterParameter={x:Static local:Gender.Männlich}}"/>
             <RadioButton Content="W"
                          GroupName="Rbg_Gender"
-                         VerticalContentAlignment="Center">
-                <RadioButton.IsChecked>
-                    <Binding Path="Geschlecht"
-                             ConverterParameter="{x:Static local:Gender.Weiblich}">
-                        <Binding.Converter>
-                            <local:GenderToBoolConverter/>
-                        </Binding.Converter>
-                    </Binding>
-                </RadioButton.IsChecked>
-            </RadioButton>
+                         IsChecked="{Binding Geschlecht, Converter={StaticResource gender2bool}, ConverterParameter={x:Static local:Gender.Weiblich}}"/>
             <RadioButton Content="D"
                          GroupName="Rbg_Gender"
-                         VerticalContentAlignment="Center">
-                <RadioButton.IsChecked>
-                    <Binding Path="Geschlecht"
-                             ConverterParameter="{x:Static local:Gender.Divers}">
-                        <Binding.Converter>
-                            <local:GenderToBoolConverter/>
-                        </Binding.Converter>
-                    </Binding>
-                </RadioButton.IsChecked>
-            </RadioButton>
+                         IsChecked="{Binding Geschlecht, Converter={StaticResource gender2bool}, ConverterParameter={x:Static local:Gender.Divers}}"/>
+
         </StackPanel>
 
         <WrapPanel Grid.Row="6" Grid.ColumnSpan="2"
                    HorizontalAlignment="Right" Margin="0,5">
             <Button x:Name="Btn_Ok"
                     Content="OK"
-                    Width="100"
-                    Margin="5,0,0,0"
                     Click="Btn_Ok_Click"/>
             <Button x:Name="Btn_Abbruch"
-                    Content="Abbrechen"
-                    Width="100"
-                    Margin="5,0,0,0"
-                    Click="Btn_Abbruch_Click"/>
+                    Content="Abbrechen"/>
         </WrapPanel>
     </Grid>
 </Window>
-
