--- a/Personendatenbank/PersonenDialog.xaml
+++ b/Personendatenbank/PersonenDialog.xaml
@@ -7,7 +7,7 @@
         xmlns:sys="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
         Title="Neue Person" 
-        Height="275" Width="285" ResizeMode="NoResize" 
+        Height="312" Width="285" ResizeMode="NoResize" 
         WindowStartupLocation="CenterScreen" Topmost="True"
         FontSize="14.0"
         Style="{StaticResource Sty_Wnd}">
@@ -63,6 +63,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -77,6 +78,8 @@
                    Grid.Row="4"/>
         <TextBlock Text="Geschlecht:" 
                    Grid.Row="5"/>
+        <TextBlock Text="Anzahl Kinder:" 
+                   Grid.Row="6"/>
 
         <TextBox x:Name="Tbx_Vorname"
                  Grid.Column="1"
@@ -130,7 +133,12 @@
 
         </StackPanel>
 
-        <WrapPanel Grid.Row="6" Grid.ColumnSpan="2"
+        <local:IntegerUpDown x:Name="Iud_Kinder" 
+                          Grid.Row="6" Grid.Column="1" Margin="2"
+                          Value="{Binding Kinder, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                          Validation.ErrorTemplate="{StaticResource CtpError}"/>
+
+        <WrapPanel Grid.Row="7" Grid.ColumnSpan="2"
                    HorizontalAlignment="Right" Margin="0,5">
             <Button x:Name="Btn_Ok"
                     Content="OK"
@@ -147,6 +155,7 @@
                                     <Condition Binding="{Binding ElementName=Tbx_Nachname, Path=(Validation.HasError)}" Value="False"/>
                                     <Condition Binding="{Binding ElementName=Dpr_Geburtsdatum, Path=(Validation.HasError)}" Value="False"/>
                                     <Condition Binding="{Binding ElementName=Cbb_Lieblingsfarbe, Path=(Validation.HasError)}" Value="False"/>
+                                    <Condition Binding="{Binding ElementName=Iud_Kinder, Path=(Validation.HasError)}" Value="False"/>
                                 </MultiDataTrigger.Conditions>
 
                                 <Setter Property="IsEnabled" Value="True"/>
