--- a/Trigger/MainWindow.xaml
+++ b/Trigger/MainWindow.xaml
@@ -4,12 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Trigger"
+        xmlns:uc="clr-namespace:UserControls;assembly=M11_UserControls"
         mc:Ignorable="d"
         Title="MainWindow" Height="412" Width="362">
 
     <!--Mittels Triggern kann das Verhalten/Aussehen von Objekten unter bestimmten Umständen geändert werden-->
     <StackPanel x:Name="Spl_Main"
                 Background="{Binding ElementName=ColorPicker, Path=PickedColor}">
+        
         <StackPanel.Triggers>
             <!--EventTrigger reagieren auf ein geworfenes RoutedEvent und werden dafür verwendet,
             Storyboards zu starten. EventTrigger sind die einzige Triggerart, die direkt in die 
@@ -59,5 +61,10 @@
         <Button x:Name="Btn_Ändern" Click="Btn_Ändern_Click" Content="Ändern"/>
 
         <Separator Margin="5"/>
+
+        <!--Beispiel-Einbindung des UserControls aus M11_UserControls-->
+        <uc:ColorPicker x:Name="ColorPicker" Tap="ColorPicker_Tap">
+            <!--<Button usercontrol:ColorPicker.Count="5"/>-->
+        </uc:ColorPicker>
     </StackPanel>
 </Window>
